parser/tests/bad/const02-3.st
% re-assignment on constant reference
%   inside subprogram body

procedure p(i: int, n: int)
  i := n
end p
